Update search.css to improve label visibility and update workload tracking files (size of Issues.txt, working_hours.txt)

--- a/search_engine_project/static/search.css
+++ b/search_engine_project/static/search.css
@@ -65,7 +65,7 @@ a {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 6px;
-  color: #999;
+  color: #222;
   float: left;
   font-family: "Lucida Sans", Trebuchet MS, Tahoma, sans-serif;
   height: 14px;
@@ -81,7 +81,7 @@ a {
 }
 
 .form-wrapper #query::placeholder {
-  color: #999;
+  color: #666;
   font-weight: normal;
 }
 
@@ -90,10 +90,14 @@ a {
   border-radius: 6px;
   padding: 8px 10px;
   font-family: "Lucida Sans", Trebuchet MS, Tahoma, sans-serif;
-  color: #555;
+  color: #222;
   width: 100%;
   cursor: pointer;
 
+}
+
+.form-wrapper label {
+  color: #222;
 }
 
 .form-wrapper #submit {
